add link to index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </header>
             <div>
                 <button type="button">Home</button>
-                <button type="button">Projects</button>
+                <button type="button"><a href="ma_portfolio/">Projects</a></button>
                 <button type="button">About</button>
                 <button type="button">Contact</button>
             </div>
