--- a/index.html
+++ b/index.html
@@ -3,31 +3,48 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>CrazyCowMM</title>
+        <title>Ben Meier</title>
+        <!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <nav>
-            <header>
-                CrazyCowMM
-            </header>
-            <div>
-                <button type="button">Home</button>
-                <button type="button"><a href="ma_portfolio/">Projects</a></button>
-                <button type="button">About</button>
-                <button type="button">Contact</button>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Ben Meier</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="projects/">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="">Contact</a>
+                    </li>
+                </ul>
+                </div>
             </div>
         </nav>
         <main>
             <!-- Splash -->
-            <div>
+            <div class="splash">
                 <!-- Splash Image -->
                 <div>
-                    
+                    <img id="splashImage" alt="Pretty splash image" src="assets/splashes/1.jpg">
                 </div>
                 <!-- Splash Text -->
-                <div>
-                    
+                <div class="splashText">
+                    <h1>Hello, I'm Ben Meier</h1>
+                    <h2>A CSUMB CS Student and Minecraft Marketplace Developer</h2>
                 </div>
             </div>
             <!-- Content -->
@@ -43,7 +60,9 @@
             </div>
         </main>
         <footer>
-
+            © Ben Meier 2022
         </footer>
+
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
