--- a/projects/index.html
+++ b/projects/index.html
@@ -3,26 +3,53 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>CrazyCowMM | Projects</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Ben Meier | Projects</title>
+        <!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="../../style.css">
     </head>
     <body>
-        <nav>
-            <header>
-                CrazyCowMM
-            </header>
-            <div>
-                <button type="button">Home</button>
-                <button type="button">Projects</button>
-                <button type="button">About</button>
-                <button type="button">Contact</button>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Ben Meier</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link" href="../">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="">Contact</a>
+                    </li>
+                </ul>
+                </div>
             </div>
         </nav>
         <main>
-            
+            <div class="card">
+                <div class="card-header">
+                  Featured
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Blocksanity Server Archive</h5>
+                  <p class="card-text">Archive of all worlds left on the Blocksanity private build server</p>
+                  <a href="server_archive/" class="btn btn-primary">Check it out</a>
+                </div>
+              </div>
         </main>
         <footer>
-
+            © Ben Meier 2022
         </footer>
+
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
