optimize archive images for web

--- a/projects/server_archive/index.html
+++ b/projects/server_archive/index.html
@@ -39,13 +39,13 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/coolsurvival.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/coolsurvival.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
                           <h5 class="card-title">Cool Survival World</h5>
                           <p class="card-text">A survival world briefly featured in a YT live stream</p>
-                          <a href="mapmakingserv117.zip" class="btn btn-primary">Download</a>
+                          <a href="https://crazycowmm.com/mapmakingserv117.zip" class="btn btn-primary">Download</a>
                         </div>
                       </div>
                     </div>
@@ -54,7 +54,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/ndsurvival.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/ndsurvival.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -69,7 +69,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/applicant.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/applicant.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -84,7 +84,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/bb2.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/bb2.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -99,7 +99,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/dogfight.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/dogfight.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -114,7 +114,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/journey.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/journey.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -129,7 +129,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/labyrinth.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/labyrinth.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -144,7 +144,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/londaria.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/londaria.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -159,7 +159,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/mapforthing.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/mapforthing.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -174,7 +174,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/memes.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/memes.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -189,7 +189,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/ngn.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/ngn.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -204,7 +204,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/mapforthing.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/noodle.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -219,7 +219,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/pp2.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/pp2.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -234,7 +234,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/present.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/present.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -249,7 +249,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/profit.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/profit.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -264,7 +264,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/realms.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/realms.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -279,7 +279,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/smo.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/smo.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -294,7 +294,7 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/spookys.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/spookys.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -309,27 +309,12 @@
                 <div class="card mb-3 archiveDownloadCard">
                     <div class="row g-0">
                       <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/thrill.png" class="img-fluid rounded-start archiveImg" alt="...">
+                        <img src="../../assets/server_archive/thrill.jpg" class="img-fluid rounded-start archiveImg" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
                           <h5 class="card-title">Thrill</h5>
                           <p class="card-text">Another amazing Sparkour build</p>
-                          <a href="mapmakingservSMO.zip" class="btn btn-primary">Download</a>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-
-                <div class="card mb-3 archiveDownloadCard">
-                    <div class="row g-0">
-                      <div class="col-md-4 archiveCardImageContainer">
-                        <img src="../../assets/server_archive/smo.png" class="img-fluid rounded-start archiveImg" alt="...">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">SMO</h5>
-                          <p class="card-text">Start of a Super Mario Odyssey Remake?</p>
                           <a href="mapmakingservSMO.zip" class="btn btn-primary">Download</a>
                         </div>
                       </div>
