--- a/projects/graphics_journal/vectors.html
+++ b/projects/graphics_journal/vectors.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Ben Meier</title>
-        <link rel="stylesheet" type="text/css" href="/styles/home.css">
+        <title>Ben Meier | Projects</title>
+       
+        <link rel="stylesheet" type="text/css" href="/styles/projects/journal.css">
     </head>
     <body>
         <nav class="mainNav">
@@ -27,29 +28,14 @@
             </ul>
         </nav>
         <main>
-            <!-- Splash -->
-            <div class="splash">
-                <!-- Splash Image -->
-                <div>
-                    <img id="splashImage" alt="Pretty splash image" src="assets/splashes/1.jpg">
+            <div class="journalEntry">
+                <h1 class="journalTitle">Vectors!</h1>
+                <p class="journalDate">2/5/2023</p>
+                <div class="journalBody">
+                    <img src="/assets/splashes/1.jpg" class="journalImage">
+                    Hello this is a journal entry!
                 </div>
-                <!-- Splash Text -->
-                <div class="splashText">
-                    <h1>Hello, I'm Ben Meier</h1>
-                    <h2>A CSUMB CS Student and Minecraft Marketplace Developer</h2>
-                </div>
-            </div>
-            <!-- Content -->
-            <div>
-                <!-- Favorite Projects -->
-                <div>
-
-                </div>
-                <!-- Work History -->
-                <div>
-
-                </div>
-            </div>
+            </div> <!-- journalEntry -->
         </main>
         <footer>
             © Ben Meier 2023
