--- a/projects/index.html
+++ b/projects/index.html
@@ -8,35 +8,35 @@
         <link rel="stylesheet" type="text/css" href="/styles/projects.css">
     </head>
     <body>
-      <nav class="mainNav">
-        <ul class="navList">
-            <li class="navItem">
-                <p class="navBrand">Ben Meier</p>
-            </li>
-            <li class="navItem">
-                <a class="navLink" href="/">Home</a>
-            </li>
-            <li class="navItem">
-                <a class="navLink  navLinkSelected" href="">Projects</a>
-            </li>
-            <li class="navItem">
-                <a class="navLink" href="about">About</a>
-            </li>
-            <li class="navItem">
-                <a class="navLink" href="contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
+        <nav class="mainNav">
+            <ul class="navList">
+                <li class="navItem">
+                    <p class="navBrand">Ben Meier</p>
+                </li>
+                <li class="navItem">
+                    <a class="navLink navLinkSelected" href="/">Home</a>
+                </li>
+                <li class="navItem">
+                    <a class="navLink" href="/projects">Projects</a>
+                </li>
+                <li class="navItem">
+                    <a class="navLink" href="/about">About</a>
+                </li>
+                <li class="navItem">
+                    <a class="navLink" href="/contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
         <main>
             <div class="body">
-                <div class="card featuredCard">
-                    <div class="card-header">
+                <div class="featuredCard">
+                    <div class="cardHeader">
                       Featured
                     </div>
-                    <div class="card-body">
-                      <h5 class="card-title">Blocksanity Server Archive</h5>
-                      <p class="card-text">Archive of all worlds left on the Blocksanity private build server</p>
-                      <a href="server_archive/" class="btn btn-primary">Check it out</a>
+                    <div class="card_text">
+                      <h5 class="content_title">WebGL Programming Journal</h5>
+                      <p>A journal created for CSUMBs CST325 course which is an initial exploration into graphics programming using WebGL.</p>
+                      <a href="graphics_journal/" class="button buttonRegular">Check it out</a>
                     </div>
                   </div>
                 <div class="cardGrid">
@@ -44,42 +44,42 @@
                         <div class="card_text">
                           <h5 class="content_title">MCCreations Redesign</h5>
                           <p>A prototype redesign of my Minecraft Community site, MCCreations. This was meant as a proof of concept that I was capable of moving the site off of Wix in terms of design. It was also my first attempt at using CSS grid</p>
-                          <a href="mccredesign/" class="btn btn-primary">Check it out!</a>
+                          <a href="mccredesign/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
                         <div class="card_text">
                           <h5 class="content_title">CrazyCowMM.com</h5>
                           <p>A quick, low scope portfolio I created when I started applying for Minecraft Marketplace jobs. A lot of the site was never finished, although it does feature some improvements in design sensibilities and layout</p>
-                          <a href="crazycowmm.com/" class="btn btn-primary">Check it out!</a>
+                          <a href="crazycowmm.com/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
                         <div class="card_text">
                           <h5 class="content_title">Mobile Apps Web Portfolio</h5>
                           <p>In 2019-2020 I took a mobile app and web design class. This is the portfolio site I created at the end of the web design half of the class.</p>
-                          <a href="ma_portfolio/" class="btn btn-primary">Check it out!</a>
+                          <a href="ma_portfolio/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
                         <div class="card_text">
                           <h5 class="content_title">Blocksanity.net Redesign</h5>
                           <p>Using skills I learned in the web design portion of the Mobile Apps class, I re-made the Blocksanity website to feature a more modern design, and use JS to build maps and map pages to make updating them easier.</p>
-                          <a href="blocksanity.net/" class="btn btn-primary">Check it out!</a>
+                          <a href="blocksanity.net/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
                         <div class="card_text">
                           <h5 class="content_title">Old Blocksanity.net</h5>
                           <p>One of the first websites fully featured websites I ever made, although this is it's final of many iterations. </p>
-                          <a href="bssite/" class="btn btn-primary">Check it out!</a>
+                          <a href="bssite/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                 </div> <!-- cardGrid -->
             </div> <!-- Body -->
         </main>
         <footer>
-            © Ben Meier 2022
+            © Ben Meier 2023
         </footer>
 
         <script type="text/javascript" src="script.js"></script>
