--- a/projects/graphics_journal/index.html
+++ b/projects/graphics_journal/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Ben Meier</title>
-        <link rel="stylesheet" type="text/css" href="/styles/home.css">
+        <title>Ben Meier | Projects</title>
+       
+        <link rel="stylesheet" type="text/css" href="/styles/projects.css">
     </head>
     <body>
         <nav class="mainNav">
@@ -27,29 +28,20 @@
             </ul>
         </nav>
         <main>
-            <!-- Splash -->
-            <div class="splash">
-                <!-- Splash Image -->
-                <div>
-                    <img id="splashImage" alt="Pretty splash image" src="assets/splashes/1.jpg">
-                </div>
-                <!-- Splash Text -->
-                <div class="splashText">
-                    <h1>Hello, I'm Ben Meier</h1>
-                    <h2>A CSUMB CS Student and Minecraft Marketplace Developer</h2>
-                </div>
-            </div>
-            <!-- Content -->
-            <div>
-                <!-- Favorite Projects -->
-                <div>
-
-                </div>
-                <!-- Work History -->
-                <div>
-
-                </div>
-            </div>
+            <div class="body">
+                <div class="cardGrid">
+                    <div class="content_card">
+                        <div class="card_text">
+                          <h5 class="content_title">Vectors</h5>
+                          <p>Building a small vector math library from scratch to understand how geographical vectors work!</p>
+                          <div class="content_info">
+                            <a href="vectors.html" class="button buttonSubtle">Read More</a>
+                            <p class="content_info">2/5/2023</p>
+                        </div> <!-- content_info -->
+                        </div>
+                    </div> <!-- card -->
+                </div> <!-- cardGrid -->
+            </div> <!-- Body -->
         </main>
         <footer>
             © Ben Meier 2023
