--- a/projects/graphics_journal/vectors.html
+++ b/projects/graphics_journal/vectors.html
@@ -32,8 +32,39 @@
                 <h1 class="journalTitle">Vectors!</h1>
                 <p class="journalDate">2/5/2023</p>
                 <div class="journalBody">
-                    <img src="/assets/splashes/1.jpg" class="journalImage">
-                    Hello this is a journal entry!
+                    <p>
+                        Since this is just the first module and there wasn't much other than some math to do, I don't have to many exciting pictures or stories to tell. However, I do feel that I've come to better understand vectors, how they work, and how to apply them in a computer science setting. 
+                    After watching the 3Blue1Brown videos I've been able to better visualize vectors and understand how they interact with one another. The idea that in some cases vectors are really just points, and in most others are instructions on how to get to a point really helped me understand how they worked.
+                    I had the more physics related definition stuck in my head, and was having a hard time figuring out how stuff like projection worked but this new understanding helped a lot.
+                </p>
+                    <p>
+                        With this updated understanding of vectors as instructions on how to get to a point (and in some cases as just points) it became easier to understand how we might want to use them in computer science. They're an easy representation of the coordinate plane, and can help us move objects around it.
+                        I did need some additional help in getting to understand particularly projection. I used <a href="https://www.khanacademy.org/math/linear-algebra/matrix_transformations/lin_trans_examples/v/introduction-to-projections">this Khan Acadmey video</a>, as well as <a href="https://matthew-brett.github.io/teaching/vector_projection.html">this site</a> written to go along with it. 
+                        I found the metaphor of a shadow particularly helpful in understanding projection, and I suspect this might be what we use it for in the future!
+                    </p>
+                    <figure>
+                        <img class="journalImage" src="/assets/journals/spot_the_error.png">
+                        <figcaption class="imgCaption">I made this same mistake far too many times! Can you find it?</figcaption>
+                    </figure>
+                    <p>
+                        What were your biggest challenges and how did you overcome them? 
+                            I think it might've been obvious from the paragrah above but projection was the hardest concept for me to grasp, and then execute in code form. When first coming into this project I had a very hard time visualizing vectors, and while I have gotten better I'm still not great at it.
+                            So while it may have taken me a little bit of time to code some of the methods, I think the hardest part was understanding why what I was doing worked, and if it was really the right way to do it. I'm excited to be able to use vectors in an actual project in order to hopefully
+                            understand how to use them even better.
+                        </p>
+                        <p>
+                            Unfortunatly I think that I messed up the team component of this a little bit. Originally we were intending to work on the project together, however I ended up having some extra time earlier in the week and got most of it done before they had a chance to look at it.
+                            We did share and brainstorm how to solve some of the problems ( he helped me a lot with the angle and rescale functions ) but in general I feel that ur teamwork could have been better and that most of that is on me.
+                    </p>
+                    <figure>
+                        <img class="journalImage" src="/assets/journals/initialization.png">
+                    <figcaption class="imgCaption">I had a hard time with initializting the values to 0 and eventually found this as the easiest approach</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img class="journalImage" src="/assets/journals/allpassed.png">
+                    <figcaption class="imgCaption">Yay all passed!</figcaption>
+                    </figure>
                 </div>
             </div> <!-- journalEntry -->
         </main>
