--- a/projects/graphics_journal/index.html
+++ b/projects/graphics_journal/index.html
@@ -33,10 +33,20 @@
                     <div class="content_card">
                         <div class="card_text">
                           <h5 class="content_title">Vectors</h5>
-                          <p>Building a small vector math library from scratch to understand how geographical vectors work!</p>
+                          <p>Building a small vector math library from scratch to understand how geometric vectors work!</p>
                           <div class="content_info">
                             <a href="vectors.html" class="button buttonSubtle">Read More</a>
                             <p class="content_info">2/5/2023</p>
+                        </div> <!-- content_info -->
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_text">
+                          <h5 class="content_title">Sphere Raycast</h5>
+                          <p>Building a small raycast library that handles rays intersecting with spheres</p>
+                          <div class="content_info">
+                            <a href="sphereCast.html" class="button buttonSubtle">Read More</a>
+                            <p class="content_info">2/9/2023</p>
                         </div> <!-- content_info -->
                         </div>
                     </div> <!-- card -->
