raytracer my baby

--- a/projects/graphics_journal/index.html
+++ b/projects/graphics_journal/index.html
@@ -50,6 +50,16 @@
                         </div> <!-- content_info -->
                         </div>
                     </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_text">
+                          <h5 class="content_title">Raytracer</h5>
+                          <p>Creating a raytracer with support for multiple objects, shadows and simple antialiasing</p>
+                          <div class="content_info">
+                            <a href="raytracer.html" class="button buttonSubtle">Read More</a>
+                            <p class="content_info">2/9/2023</p>
+                        </div> <!-- content_info -->
+                        </div>
+                    </div> <!-- card -->
                 </div> <!-- cardGrid -->
             </div> <!-- Body -->
         </main>
